[package]
name = "perlin_noise"
version = "0.1.0"
authors = ["Joe Burgess <bojurgess@gmail.com>"]
description = "A Perlin noise generator"
license = "MIT"
repository = "https://github.com/bojurgess/perlin-noise"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
fastrand = "2.3.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
num-traits = "0.2.19"
wasm-bindgen = "0.2.99"
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
